--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,14 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@diego/angular-material": [
+        "dist/diego-angular-material"
+      ],
+      "@diego/angular-material/*": [
+        "dist/diego-angular-material/*"
+      ]
+    }
   }
 }
